# midi-cable

./: Cargo.toml  Makefile  README.md  fwd.go  go.mod  go.sum  list.go  main.go  port.go
docs/: architecture.md
src/: app.rs  connection.rs  events.rs  main.rs  ui.rs
src/midi/: forwarder.rs  manager.rs  mod.rs  monitor.rs  validation.rs  virtual_ports.rs
